# duplicate-video-finder

./: .bumpversion.cfg  README.md  main.py  performance_test.py  pyproject.toml
src/video_finder/: arguments.py  cache_manager.py  cli.py  config.py  core.py  hashing.py  utils.py  watched_db_manager.py
src/video_finder/core/: __init__.py  calculate_all_hashes.py  find_similar_groups.py  identify_watched_videos.py
src/video_finder/modes/: __init__.py  create_watched_db.py  find_similar.py  inspect_db.py
src/video_finder/utils/: __init__.py  bktree.py  display_settings.py  get_video_files.py  group_similar_items.py  human_readable_size.py  move_duplicate_files.py  move_skipped_files.py  move_watched_files.py  print_similar_video_groups.py
