[project]
name = "duplicate-video-finder"
version = "0.1.1"
description = "Duplicate videos finder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagehash>=4.3.2",
    "opencv-python>=4.11.0.86",
]

[project.optional-dependencies]
dev = ["bump2version>=1.0.1"]

[project.scripts]
dvf-cli = "src.video_finder.cli:main"
